sorting assets by price change and rank added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">CryptoManager</string>
     <string name="action_settings">Settings</string>
+
+    <array name="sorts">
+        <item>Rank</item>
+        <item>1H Price Change</item>
+        <item>24H Price Change</item>
+        <item>7D Price Change</item>
+    </array>
 </resources>
