Added Liking System for Assets Implemented Liked based Sort

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <array name="sorts">
+        <item>Liked</item>
         <item>Rank</item>
         <item>1H Price Change</item>
         <item>24H Price Change</item>
